--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@f2ville/spaceapi": "^1.0.4",
     "framer-motion": "^11.5.4",
     "next": "14.2.11",
     "react": "^18",
